--- a/assets/template/component.tsx.template
+++ b/assets/template/component.tsx.template
@@ -1,6 +1,6 @@
-import React from 'react'; 
+import { FC, memo } from 'react'; 
  
-export const Component: React.FC = React.memo(() => {
+export const Component: FC = memo(() => {
     return <></>;
 });
 
